--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,11 @@ keywords = [""]
 
 
 [dependencies]
+clap = { version = "4.5.27", features = ["derive"] }
+gimli = "0.31.1"
 nix = { version = "0.29.0", features = ["process"] }
+serde = "1.0.217"
+serde_json = "1.0.137"
 
 [[bin]]
 name = "cm"
