--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,12 @@ keywords = [""]
 [dependencies]
 clap = { version = "4.5.27", features = ["derive"] }
 gimli = "0.31.1"
-nix = { version = "0.29.0", features = ["process"] }
+nix = { version = "0.29.0", features = ["process", "ptrace"] }
 serde = "1.0.217"
 serde_json = "1.0.137"
+thiserror = "2.0.11"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 
 [[bin]]
 name = "cm"
