--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ keywords = [""]
 [dependencies]
 clap = { version = "4.5.27", features = ["derive"] }
 gimli = "0.31.1"
-nix = { version = "0.29.0", features = ["process", "ptrace"] }
+nix = { version = "0.29.0", features = ["personality", "process", "ptrace"] }
 serde = "1.0.217"
 serde_json = "1.0.137"
 thiserror = "2.0.11"
