--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,10 +13,16 @@ keywords = [""]
 
 
 [dependencies]
+addr2line = "0.24.2"
 clap = { version = "4.5.27", features = ["derive"] }
 dialoguer = { version = "0.11.0", features = ["history"] }
-gimli = "0.31.1"
+gimli = { version = "0.31.1", default-features = true, features = [
+	"std",
+	"read",
+] }
 nix = { version = "0.29.0", features = ["personality", "process", "ptrace"] }
+object = "0.36.7"
+ouroboros = "0.18.5"
 serde = "1.0.217"
 serde_json = "1.0.137"
 thiserror = "2.0.11"
