--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ gimli = { version = "0.31.1", default-features = true, features = [
 nix = { version = "0.29.0", features = ["personality", "process", "ptrace"] }
 object = "0.36.7"
 ouroboros = "0.18.5"
+proc-maps = "0.4.0"
 serde = "1.0.217"
 serde_json = "1.0.137"
 thiserror = "2.0.11"
