--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ nix = { version = "0.29.0", features = ["personality", "process", "ptrace"] }
 object = "0.36.7"
 ouroboros = "0.18.5"
 proc-maps = "0.4.0"
-serde = "1.0.217"
+serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 thiserror = "2.0.11"
 tracing = "0.1.41"
