feat: wait_signal

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,12 @@ gimli = { version = "0.31.1", default-features = true, features = [
 	"read",
 ] }
 iced-x86 = "1.21.0"
-nix = { version = "0.29.0", features = ["personality", "process", "ptrace"] }
+nix = { version = "0.29.0", features = [
+	"personality",
+	"process",
+	"ptrace",
+	"signal",
+] }
 object = "0.36.7"
 ouroboros = "0.18.5"
 proc-maps = "0.4.0"
