--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,11 +30,13 @@ nix = { version = "0.29.0", features = [
 object = "0.36.7"
 ouroboros = "0.18.5"
 proc-maps = "0.4.0"
+rustc-demangle = "0.1.24"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 thiserror = "2.0.11"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+unwind = { version = "0.4.2", features = ["ptrace"] }
 
 [[bin]]
 name = "cm"
