--- a/.github/workflows/cargo.yaml
+++ b/.github/workflows/cargo.yaml
@@ -20,6 +20,10 @@ jobs:
       # added or changed files to the repository.
       contents: write
     steps:
+      - name: install system dependencies
+        run: |
+          sudo apt update
+          sudo apt install libunwind-dev
       - name: get repo
         uses: actions/checkout@v4
       - name: install rust
