--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,12 @@ categories = [
 	"memory-management",
 ]
 
+[package.metadata."docs.rs"]
+all-features = true
+
 [dependencies]
-clap = { version = "4.5.27", features = ["derive"] }
-dialoguer = { version = "0.11.0", features = ["history"] }
+clap = { version = "4.5.27", features = ["derive"], optional = true }
+dialoguer = { version = "0.11.0", features = ["history"], optional = true }
 gimli = { version = "0.31.1", default-features = true, features = [
 	"std",
 	"read",
@@ -42,10 +45,18 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 unwind = { version = "0.4.2", features = ["ptrace"] }
 
+[features]
+default = ["binaries"]
+binaries = ["cli", "cmserve"]
+cli = ["dep:clap", "dep:dialoguer"]
+cmserve = ["dep:clap"]
+
 [[bin]]
 name = "cm"
+required-features = ["cli"]
 path = "src/bins/cm.rs"
 
 [[bin]]
 name = "cmserve"
+required-features = ["cmserve"]
 path = "src/bins/cmserve.rs"
