chore: dont run cargo ci on master (commit back is disallowed)

--- a/.github/workflows/cargo.yaml
+++ b/.github/workflows/cargo.yaml
@@ -3,10 +3,11 @@ on:
   pull_request:
     branches:
       - '**'
+      - '!master' # that is protected
   push:
     branches:
       - '**'
-      # - '!master'
+      - '!master' # that is protected
 
 env:
   CARGO_TERM_COLOR: always
