--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ proc-maps = "0.4.0"
 rustc-demangle = "0.1.24"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
+steckrs = "0.1.1"
 thiserror = "2.0.11"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
