--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,11 +46,13 @@ thiserror = "2.0.11"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 unwind = { version = "0.4.2", features = ["ptrace"] }
+which = "7.0.2"
+shlex = { version = "1.3.0", optional = true }
 
 [features]
 default = ["binaries", "plugins"]
 binaries = ["cli", "cmserve"]
-cli = ["dep:clap", "dep:dialoguer", "dep:human-panic"]
+cli = ["dep:clap", "dep:dialoguer", "dep:human-panic", "dep:shlex"]
 cmserve = ["dep:clap", "dep:human-panic"]
 plugins = ["dep:steckrs"]
 
